@@ -1,5 +1,7 @@
 Version 1.6 -Tau Ceti-
 
+* [NEW] Checkboxes added in page history to remove many versions of a page.
+* [NEW] View page source option from page history for any version. 
 * [NEW] Inter wiki links, admin can define URLS in the format 
   http://www.example.com?page=$page or similar ascociating the URL with 
   a name then the syntax ((Wiki:name)) can be used to link to a page 
